Fixed footer overlap

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ nav li {
 
 .selected {
   color: #fff;
-  padding-bottom: 18px;
+  padding-bottom: 16px;
   border-bottom: 4px solid #F6511D;
 }
 
@@ -78,7 +78,7 @@ nav a {
 
 nav a:hover {
   transition: .2s linear;
-  padding-bottom: 18px;
+  padding-bottom: 16px;
   color: #fff;
   text-decoration: none;
   border-bottom: 4px solid #F6511D;
